Forked from reveal.js. Added my slides, changed link colours

--- a/css/theme/source/white.scss
+++ b/css/theme/source/white.scss
@@ -28,7 +28,7 @@ $headingTextShadow: none;
 $headingLetterSpacing: normal;
 $headingTextTransform: uppercase;
 $headingFontWeight: 600;
-$linkColor: #2a76dd;
+$linkColor: #0f6638;
 $linkColorHover: lighten( $linkColor, 15% );
 $selectionBackgroundColor: lighten( $linkColor, 25% );
 
@@ -47,3 +47,12 @@ section.has-dark-background {
 // Theme template ------------------------------
 @import "../template/theme";
 // ---------------------------------------------
+
+
+.object-model {
+  display: inline-block;
+  background-color: $linkColor;
+  padding: 50px!important;
+  margin: 20px!important;
+  color: white;
+}
