Adding images, notes, switching some slides around

--- a/css/theme/source/white.scss
+++ b/css/theme/source/white.scss
@@ -28,7 +28,7 @@ $headingTextShadow: none;
 $headingLetterSpacing: normal;
 $headingTextTransform: uppercase;
 $headingFontWeight: 600;
-$linkColor: #0f6638;
+$linkColor: #af1f8e;
 $linkColorHover: lighten( $linkColor, 15% );
 $selectionBackgroundColor: lighten( $linkColor, 25% );
 
