--- a/css/theme/template/theme.scss
+++ b/css/theme/template/theme.scss
@@ -261,10 +261,6 @@ body {
 
 .reveal section img {
 	margin: 15px 0px;
-	background: rgba(255,255,255,0.12);
-	border: 4px solid $mainColor;
-
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
 }
 
 	.reveal section img.plain {
@@ -343,3 +339,8 @@ body {
 	}
 
 
+.super-small {
+  a {
+    font-size: 80%!important;
+  }
+}
