--- a/css/theme/white.css
+++ b/css/theme/white.css
@@ -22,7 +22,7 @@ body {
 
 ::selection {
   color: #fff;
-  background: #1fd575;
+  background: #e469c8;
   text-shadow: none; }
 
 .reveal .slides > section,
@@ -204,29 +204,26 @@ body {
  * LINKS
  *********************************************/
 .reveal a {
-  color: #0f6638;
+  color: #af1f8e;
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
   transition: color .15s ease; }
 
 .reveal a:hover {
-  color: #19a95d;
+  color: #dd3eb8;
   text-shadow: none;
   border: none; }
 
 .reveal .roll span:after {
   color: #fff;
-  background: #052313; }
+  background: #6e1359; }
 
 /*********************************************
  * IMAGES
  *********************************************/
 .reveal section img {
-  margin: 15px 0px;
-  background: rgba(255, 255, 255, 0.12);
-  border: 4px solid #222;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
+  margin: 15px 0px; }
 
 .reveal section img.plain {
   border: 0;
@@ -239,7 +236,7 @@ body {
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: #0f6638;
+  border-color: #af1f8e;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
@@ -247,31 +244,31 @@ body {
  *********************************************/
 .reveal .controls .navigate-left,
 .reveal .controls .navigate-left.enabled {
-  border-right-color: #0f6638; }
+  border-right-color: #af1f8e; }
 
 .reveal .controls .navigate-right,
 .reveal .controls .navigate-right.enabled {
-  border-left-color: #0f6638; }
+  border-left-color: #af1f8e; }
 
 .reveal .controls .navigate-up,
 .reveal .controls .navigate-up.enabled {
-  border-bottom-color: #0f6638; }
+  border-bottom-color: #af1f8e; }
 
 .reveal .controls .navigate-down,
 .reveal .controls .navigate-down.enabled {
-  border-top-color: #0f6638; }
+  border-top-color: #af1f8e; }
 
 .reveal .controls .navigate-left.enabled:hover {
-  border-right-color: #19a95d; }
+  border-right-color: #dd3eb8; }
 
 .reveal .controls .navigate-right.enabled:hover {
-  border-left-color: #19a95d; }
+  border-left-color: #dd3eb8; }
 
 .reveal .controls .navigate-up.enabled:hover {
-  border-bottom-color: #19a95d; }
+  border-bottom-color: #dd3eb8; }
 
 .reveal .controls .navigate-down.enabled:hover {
-  border-top-color: #19a95d; }
+  border-top-color: #dd3eb8; }
 
 /*********************************************
  * PROGRESS BAR
@@ -280,14 +277,17 @@ body {
   background: rgba(0, 0, 0, 0.2); }
 
 .reveal .progress span {
-  background: #0f6638;
+  background: #af1f8e;
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
 
+.super-small a {
+  font-size: 80% !important; }
+
 .object-model {
   display: inline-block;
-  background-color: #0f6638;
+  background-color: #af1f8e;
   padding: 50px !important;
   margin: 20px !important;
   color: white; }
