--- a/css/theme/sky.css
+++ b/css/theme/sky.css
@@ -289,5 +289,6 @@ body {
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
 
-.super-small a {
-  font-size: 80% !important; }
+.super-small li {
+  line-height: 1.3;
+  font-size: 18px; }
